add task of the day1

--- a/day1/index.html
+++ b/day1/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript Labs</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>JavaScript Labs</h1>
 
+        <section id="user-profile-generator">
+            <h2>User Profile Generator</h2>
+            <button id="generateProfileBtn">Generate Profile</button>
+            <div id="profileOutput" class="output-area"></div>
+        </section>
+
+        <section id="shopping-cart-calculator">
+            <h2>Shopping Cart Calculator</h2>
+            <button id="calculateTotalBtn">Calculate Total</button>
+            <div id="cartTotalOutput" class="output-area"></div>
+        </section>
+
+        <section id="age-verification">
+            <h2>Age Verification</h2>
+            <input type="number" id="ageInput" placeholder="Enter your age">
+            <button id="verifyAgeBtn">Verify</button>
+            <div id="ageVerificationOutput" class="output-area"></div>
+        </section>
+
+        <section id="dark-mode">
+            <h2>Dark Mode</h2>
+            <button id="toggleDarkModeBtn">Toggle Dark Mode</button>
+        </section>
+
+        <section id="shopping-list">
+            <h2>Shopping List</h2>
+            <input type="text" id="shoppingItemInput" placeholder="Add an item...">
+            <button id="addItemBtn">Add</button>
+            <ul id="shoppingListItems">
+                </ul>
+        </section>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
